--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -2,6 +2,7 @@
     --white-color: #fff;
     --black-color:#000;
     --text-color:#333;
+    --primary-color: #EE4D2D;
 }
 *{
     box-sizing: inherit;
@@ -23,4 +24,23 @@ html{
 .grid__row{
     display: flex;
     flex-wrap: wrap;
+}
+/* Animation */
+@keyframes fadeIn{
+    from{
+        opacity: 0;
+    }
+    to{
+        opacity: 1;
+    }
+}
+@keyframes blowOut{
+    from{
+        transform: scale(0);
+        opacity: 0;
+    }
+    to{
+        transform: scale(1);
+        opacity: 1;
+    }
 }
