--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -14,6 +14,13 @@
 .header__navbar-item{
     margin: 0 8px;
     position: relative;
+    min-height: 26px;
+}
+.header__navbar-item--has-qr:hover .header__qr{
+    display: block;
+}
+.header__navbar-item--has-notify:hover .header__notify{
+    display: block;
 }
 .header__navbar-item,
 .header__navbar-item-link{
@@ -21,6 +28,13 @@
     font-size: 1.4rem;
     color: var(--white-color);
     text-decoration: none;
+    font-weight: 300;
+}
+.header__navbar-item,
+.header__navbar-item-link,
+.header__navbar-icon-link{
+    display: inline-flex;
+    align-items: center;
 }
 .header__navbar-item--bold{
     font-weight: 400;
@@ -36,7 +50,8 @@
     transform: translateY(-50%);
 }
 .header__navbar-item:hover,
-.header__navbar-item-link:hover{
+.header__navbar-item-link:hover,
+.header__navbar-icon-link:hover{
     color: rgba(255,255,255,.7);
     cursor: pointer;
 }
@@ -46,4 +61,149 @@
 }
 .header__navbar-icon{
     font-size: 1.8rem;
+    margin: 0 4px;
+}
+.header__navbar-title--no-pointer{
+    cursor: text;
+    color: var(--white-color);
+}
+/* Header QR code */
+.header__qr{
+    display: none;
+    width: 186px;
+    background-color: var(--white-color);
+    position: absolute;
+    padding: 2px;
+    left: 0;
+    top: 118%;
+    border-radius: 4px;
+    animation: fadeIn ease-in .2s;
+    cursor: default;
+}
+.header__qr::before{
+    content: "";
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 20px;
+    left: 0;
+    top: -16px;
+}
+.header__qr-img{
+    width: 100%;
+}
+.header__qr-apps{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    margin-top: 8px;
+}
+.header__qr-link{
+    cursor: default;
+    margin-bottom: 6px;
+}
+.header__qr-link:first-child{
+    margin-left: 8px;
+}
+.header__qr-link:nth-child(2){
+    margin-right: 12px;
+}
+.header__qr-link:last-child{
+    margin-left: 8px;
+}
+.header__qr-download-img{
+    height: 16px;;
+}
+/* Header notify */
+.header__notify{
+    display: none;
+    width: 404px;
+    position: absolute;
+    top: 118%;
+    right: 0px;
+    background-color: var(--white-color);
+    border: 1px solid #D3D3D3;
+    border-radius: 4px;
+    cursor: default;
+    transform-origin: calc(100%-20px) top;
+    animation: blowOut ease-in 0.2s;
+    will-change: opacity, transform;
+}
+.header__notify::before{
+    content: "";
+    border-width: 8px 16px;
+    border-style: solid;
+    border-color: transparent transparent var(--white-color) transparent;
+    position: absolute;
+    right: 24px;
+    top: -16px;
+}
+.header__notify::after{
+    content: "";
+    display: block;
+    position: absolute;
+    width: 100px;
+    height: 20px;
+    right: 0;
+    top: -16px;
+}
+.header__notify-header{
+    height: 40px;
+    background-color: var(--white-color)
+}
+.header__notify-header h3{
+    color: #999;
+    margin: 0 0 0 12px;
+    font-weight: 400;
+    font-size: 1.4rem;
+    line-height: 40px;
+    user-select: none;
+}
+.header__notify-list{
+    padding: 0;
+}
+.header__notify-item{
+    background-color: rgba(238,75,43,0.04);
+}
+.header__notify-item:hover{
+    background-color: #f1f1f1;
+}
+.header__notify-link{
+    display: flex;
+    width: 100%;
+    padding: 12px;
+    text-decoration: none;
+}
+.header__notify-img{
+    width: 48px;
+}
+.header__notify-info{
+    margin-left: 12px;
+}
+.header__notify-name{
+    display: block;
+    color: var(--black-color);
+    font-size: 1.4rem;
+    margin-bottom: 4px;
+    font-weight: 400;
+    line-height: 1.8rem;
+}
+.header__notify-desc{
+    display: block;
+    color: #756F6E;
+    font-size: 1.2rem;
+    line-height: 1.6rem;
+}
+.header__notify-footer{
+
+}
+.header__notify-footer-btn{
+    display: block;
+    color: var(--text-color);
+    text-decoration: none;
+    width: 100%;
+    padding: 12px 0;
+    text-align: center;
+    font-size: 1.4rem;
+    font-weight: 400;
 }
