--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -3,8 +3,14 @@
     --black-color:#000;
     --text-color:#333;
     --primary-color: #EE4D2D;
+    --border-color:#dbdbdb;
+    --header-height:120px;
+    --navbar-height:34px;
+    --header-with-search-height: calc(var(--header-height) - var(--navbar-height));
 }
-*{
+*{  
+    margin: 0;
+    padding: 0;
     box-sizing: inherit;
 }
 html{
@@ -25,6 +31,30 @@ html{
     display: flex;
     flex-wrap: wrap;
 }
+/* Modal */
+.modal{
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    display: flex;
+    animation: fadeIn linear 0.1;
+}
+.modal__overlay{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(0, 0, 0,0.4);
+}
+.modal__body{
+    margin: auto;
+    position: relative;
+    animation: blowOut linear 0.1s;
+}
+.modal__inner{
+
+}
 /* Animation */
 @keyframes fadeIn{
     from{
@@ -43,4 +73,37 @@ html{
         transform: scale(1);
         opacity: 1;
     }
+}
+/* Btn style */
+.btn{
+    padding: 0 12px;
+    min-width: 124px;
+    height: 34px;
+    text-decoration: none;
+    border-radius: 2px;
+    border: none;
+    font-size: 1.4rem;
+    outline: none;
+    cursor: pointer;
+    color: var(--text-color);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.btn.btn--normal:hover{
+    background-color: rgba(0, 0, 0, 0.1);
+}
+.btn.btn--size-s{
+    height: 32px;
+    font-size: 1.2rem;
+    padding: 0 8px;
+}
+.btn.btn--primary{
+    color: var(--white-color);
+    background-color:  var(--primary-color);
+}
+.btn.btn--disable{
+    color: #949494;
+    cursor: default;
+    background-color: #c3c3c3;
 }
